# rccl-rdma-sharp-plugins

./: LICENSE  Makefile.am  README.md  configure.ac  rccl-rdma-sharp-plugins.pc.in  rccl-rdma-sharp-plugins.spec.in
.ci/: Jenkinsfile  README.md
.github/: CODEOWNERS
contrib/: buildrpm.sh
debian/: changelog.in  control.in  copyright  rules.in
include/: ibvwrap.h  nccl.h  utils.h
src/: Makefile.am  ib_plugin.c  ibvwrap.c  p2p_plugin.c  sharp_plugin.c  ucx_plugin.c  ucx_rma_plugin.c  utils.c
